Home shortcut should use touch icons when possible.

Needs https://bugs.webkit.org/show_bug.cgi?id=109061 to actually use apple-touch-icons.

BUG=125076
NOTRY=true

Review URL: https://chromiumcodereview.appspot.com/12209023

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@184863 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0d317f5441431097d9081679b7446be390c1cbfe